# backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.h
drivers/: DatabaseConnection.h
drivers/mysql/: CMakeLists.txt
drivers/mysql/include/: DatabaseConnection.h  databaseconnection.h
drivers/mysql/source/: DatabaseConnection.cpp  databaseconnection.cpp
include/: App.h  Application.h  ArbitraryPointer.h  BinaryFileStream.h  ConnectionSettings.h  DatabaseConnectionFactory.h  DatabaseConnectionManager.h  Enums.h  FileStream.h  JsonFileStream.h  JsonHandler.h  Message.h  NSEnums.h  QueryCommand.h  QueryError.h  QueryResult.h  SettingsField.h  SmartObject.h  Thread.h  ThreadLocal.h  Variant.h  app.h  application.h  console.h  databaseconnectionfactory.h  databaseconnectionmanager.h  filestream.h  smartobject.h  thread.h  threadlocal.h  variant.h
libs/drivers/mysql/: CMakeLists.txt
libs/drivers/mysql/include/: databaseconnection.h
libs/drivers/mysql/source/: databaseconnection.cpp
logic/: CMakeLists.txt
logic/include/: application.h  connectionsettings.h  databaseconnection.h  databaseconnectionfactory.h  databaseconnectionmanager.h  enums.h  filestream.h  nsenums.h  smartobject.h  structs.h  thread.h  threadlocal.h  uuid.h  variant.h
logic/source/: application.cpp  connectionsettings.cpp  console.cpp  databaseconnection.cpp  databaseconnectionfactory.cpp  databaseconnectionmanager.cpp  filestream.cpp  smartobject.cpp  thread.cpp  uuid.cpp  variant.cpp
source/: Application.cpp  BinaryFileStream.cpp  ConnectionSettings.cpp  Console.cpp  DatabaseConnection.cpp  DatabaseConnectionFactory.cpp  DatabaseConnectionManager.cpp  FileStream.cpp  JsonFileStream.cpp  JsonHandler.cpp  Message.cpp  SettingsField.cpp  SmartObject.cpp  Thread.cpp  UUID.cpp  Variant.cpp  databaseconnectionfactory.cpp  databaseconnectionmanager.cpp  filestream.cpp  smartobject.cpp  uuid.cpp
tests/: CMakeLists.txt
tests/include/: MockConnectionSettings.h  MockSmartObject.h  SmartObjectTester.h  TrackedPointer.h  mockapplication.h  mockdatabaseconnection.h  smartobjecttester.h
tests/source/: SmartObjectTester.cpp  TestApplication.cpp  TestConnectionSettings.cpp  TestDatabaseConnection.cpp  TestDatabaseConnectionManager.cpp  TestSmartObject.cpp  TestThread.cpp  TestThreadLocal.cpp  TestUUID.cpp  TestVariant.cpp  TrackedPointer.cpp  smartobjecttester.cpp  testapplication.cpp  testconnectionsettings.cpp  testdatabaseconnection.cpp  testdatabaseconnectionmanager.cpp  testsmartobject.cpp  testthread.cpp  testthreadlocal.cpp  testuuid.cpp  testvariant.cpp
wrappers/RabidSQL.wrappers.objectivec/RabidSQL.wrappers.objectivec/: application.h  application.mm  connectionsettings.h  connectionsettings.mm  databaseconnection.h  databaseconnection.mm  databaseconnectionfactory.h  databaseconnectionfactory.mm  databaseconnectionmanager.h  databaseconnectionmanager.mm  enums.h  object.h  object.mm  prototypes.h  smartobject.h  smartobject.mm  smartobjectwrapper.h  smartobjectwrapper.mm  structures.h  structures.m  swiftbridgeheader.h  uuid.h  uuid.mm  variant.h  variant.mm
wrappers/RabidSQL.wrappers.objectivec/RabidSQL.wrappers.objectivec.xcodeproj/: project.pbxproj
wrappers/RabidSQL.wrappers.objectivec/RabidSQL.wrappers.objectivec.xcodeproj/xcshareddata/xcschemes/: RabidSQL.xcscheme  Tests.xcscheme
wrappers/RabidSQL.wrappers.objectivec/Tests/: TestDatabaseConnectionManager.m  TestObjectCommunication.m  TestSimpleWrappers.mm
